Add Example ascan/pscan rules (Migrated from ext repo)
Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>

--- a/src/main/javahelp/com/github/youruser/zap/javaexample/resources/help/contents/simple.html
+++ b/src/main/javahelp/com/github/youruser/zap/javaexample/resources/help/contents/simple.html
@@ -26,5 +26,35 @@ An API component that adds an action endpoint.
 <H2>Help file</H2>
 This help file.
 
+<H2>Active Scan Rules</H2>
+
+<H2 id="id-60101">An example active scan rule which loads data from a file</H2>
+This implements an example active scan rule that loads strings from a file that the user can edit.<br>
+For more details see: 
+<a href="https://www.zaproxy.org/blog/2014-04-30-hacking-zap-4-active-scan-rules/">Hacking ZAP Part 4: Active Scan Rules</a>.
+<p>
+Latest code: <a href="https://github.com/zaproxy/addon-java/blob/main/src/main/java/com/github/youruser/zap/javaexample/ExampleFileActiveScanRule.java">ExampleFileActiveScanRule.java</a>
+
+<H2 id="id-60100">Example Active Scan Rule: Denial of Service</H2>
+This implements a very simple example active scan rule.<br>
+For more details see: 
+<a href="https://www.zaproxy.org/blog/2014-04-30-hacking-zap-4-active-scan-rules/">Hacking ZAP Part 4: Active Scan Rules</a>.
+<p>
+Latest code: <a href="https://github.com/zaproxy/addon-java/blob/main/src/main/java/com/github/youruser/zap/javaexample/ExampleSimpleActiveScanRule.java">ExampleSimpleActiveScanRule.java</a>
+
+<H2>Passive Scan Rules</H2>
+
+<H2>An example passive scan rule which loads data from a file</H2>
+This implements an example passive scan rule that loads strings from a file that the user can edit.<br>
+For more details see: <a href="https://www.zaproxy.org/blog/2014-04-03-hacking-zap-3-passive-scan-rules/">Hacking ZAP Part 3: Passive Scan Rules</a>.
+<p>
+Latest code: <a href="https://github.com/zaproxy/addon-java/blob/main/src/main/java/com/github/youruser/zap/javaexample/ExampleFilePassiveScanRule.java">ExampleFilePassiveScanRule.java</a>
+
+<H2>Example Passive Scan Rule: Denial of Service</H2>
+This implements a very simple example passive scan rule.<br>
+For more details see: <a href="https://www.zaproxy.org/blog/2014-04-03-hacking-zap-3-passive-scan-rules/">Hacking ZAP Part 3: Passive Scan Rules</a>.
+<p>
+Latest code: <a href="https://github.com/zaproxy/addon-java/blob/main/src/main/java/com/github/youruser/zap/javaexample/ExampleSimplePassiveScanRule.java">ExampleSimplePassiveScanRule.java</a>
+
 </BODY>
 </HTML>
